[package]
name = "backstop-manager"
version = "1.0.0"
authors = ["Script3 Ltd. <gm@script3.io>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "22.0.7"
blend-contract-sdk = "2.22.0-beta.5"

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }
blend-contract-sdk = { version = "2.22.0-beta.5", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
